# minilab-3-control

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pages.yml  release.yml  test.yml
docs/: index.html
iamkat_MiniLab_3/: __init__.py  clip_launch.py  elements.py  mappings.py  midi.py  monitoring.py  navigation.py  solo.py  view_toggle.py  volume.py
scripts/: dis_framework.py  disassemble.py  extract_elements.py  midi_monitor.py
tests/: conftest.py  test_mappings.py  test_midi.py  test_monitoring.py  test_navigation.py
